--- a/people.html
+++ b/people.html
@@ -185,7 +185,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
           <!-- CEO -->
           <div class="team-card">
-            <div class="team-photo" style="background-color: #F5F5F5;"></div>
+            <div class="team-photo" style="background-image: url('/public/jaewoo.jpg'); background-position: center; background-size: cover;"></div>
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-900">Jaewoo Kang</h3>
               <p class="text-gray-800 font-medium mb-3">Co-Founder & CEO</p>
@@ -212,7 +212,7 @@
           
           <!-- CTO -->
           <div class="team-card">
-            <div class="team-photo" style="background-color: #F5F5F5;"></div>
+            <div class="team-photo" style="background-image: url('/public/filippo.jpg'); background-position: center; background-size: cover;"></div>
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-900">Filippo Cuni</h3>
               <p class="text-gray-800 font-medium mb-3">Co-Founder & CTO</p>
@@ -239,7 +239,7 @@
 
           <!-- COO -->
           <div class="team-card">
-            <div class="team-photo" style="background-color: #F5F5F5;"></div>
+            <div class="team-photo" style="background-image: url('/public/kate.png'); background-position: center; background-size: cover;"></div>
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-900">Kate Gemrich</h3>
               <p class="text-gray-800 font-medium mb-3">Co-Founder & COO</p>
