incorrect public dir

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         // Load the point cloud GLB model
         const loader = new THREE.GLTFLoader();
         loader.load(
-          '/public/point_cloud.glb', // Path to the GLB file
+          '/resources/point_cloud.glb', // Path to the GLB file
           function (gltf) {
             pointCloud = gltf.scene;
             
