--- a/manifesto.html
+++ b/manifesto.html
@@ -217,12 +217,12 @@
   <body>
     <!-- Header with navigation -->
     <header id="header">
-      <a href="landing.html" class="logo">DermTeach</a>
+      <a href="index.html" class="logo">DermTeach</a>
       
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
         <a href="people.html" class="nav-link">People</a>
-        <a href="about.html" class="nav-link active">About</a>
+        <a href="manifesto.html" class="nav-link active">Manifesto</a>
       </nav>
     </header>
 
@@ -259,7 +259,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-left">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2023 Q4</h3>
+              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q1</h3>
               <p class="text-gray-700">
                 The DermTeach concept was born when Jaewoo Kang (UT) and Filippo Cuni (ETH) connected over their shared vision of bringing clinical-grade skin diagnostics to the home setting. Initial research and concept development began.
               </p>
@@ -270,7 +270,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-right">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2024 Q1</h3>
+              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q1</h3>
               <p class="text-gray-700">
                 Kate Gemrich, Adam Kahn, and Nadia Wheeler from Purdue's Biomedical Engineering program joined the team, bringing specialized expertise in biosensor development and medical device design.
               </p>
@@ -281,9 +281,9 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-left">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2024 Q2</h3>
+              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q2</h3>
               <p class="text-gray-700">
-                Successfully developed our first prototype of DermSens™ Home Kit and began preparation for initial validation testing with a small focus group of volunteers.
+                Reframed the core vision board of the team to move faster and more efficiently. We began prototyping our first skin diagnostic device, focusing on user experience and data security.
               </p>
             </div>
           </div>
@@ -292,7 +292,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-right">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2024 Q3</h3>
+              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q3</h3>
               <p class="text-gray-700">
                 Secured initial seed funding from university innovation grants and began exploring partnerships with dermatology clinics for clinical validation studies.
               </p>
@@ -537,8 +537,8 @@
                 <div>
                   <p class="font-medium text-gray-900">Location</p>
                   <p class="text-gray-700">
-                    Innovation Hub<br>
-                    West Lafayette, IN 47906
+                    ETH CHN<br>
+                    Universitätstrasse 16, 8006 Zürich
                   </p>
                 </div>
               </div>
@@ -550,7 +550,7 @@
                 </svg>
                 <div>
                   <p class="font-medium text-gray-900">Email</p>
-                  <p class="text-gray-700">team@dermteach.com</p>
+                  <p class="text-gray-700">team@dermtea.ch</p>
                 </div>
               </div>
               
