--- a/solutions.html
+++ b/solutions.html
@@ -125,12 +125,12 @@
   <body>
     <!-- Header with navigation -->
     <header id="header">
-      <a href="landing.html" class="logo">DermTeach</a>
+      <a href="index.html" class="logo">DermTeach</a>
       
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link active">Solutions</a>
         <a href="people.html" class="nav-link">People</a>
-        <a href="about.html" class="nav-link">About</a>
+        <a href="manifesto.html" class="nav-link">Manifesto</a>
       </nav>
     </header>
 
