--- a/manifesto.html
+++ b/manifesto.html
@@ -259,7 +259,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-left">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q1</h3>
+              <h3 class="font-bold text-xl mb-2 text-gray-900">Feb 2025</h3>
               <p class="text-gray-700">
                 The DermTeach concept was born when Jaewoo Kang (UT) and Filippo Cuni (ETH) met at Lean Startup Academy and connected over their shared vision of bringing clinical-grade skin diagnostics to the home setting.
               </p>
@@ -270,7 +270,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-right">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q1</h3>
+              <!-- <h3 class="font-bold text-xl mb-2 text-gray-900"></h3> -->
               <p class="text-gray-700">
                 Kate Gemrich, Adam Kahn, and Nadia Wheeler from Purdue's Biomedical Engineering program joined the team, bringing specialized expertise in biosensor development and medical device design.
               </p>
@@ -281,7 +281,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-left">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q2</h3>
+              <h3 class="font-bold text-xl mb-2 text-gray-900">April 2025</h3>
               <p class="text-gray-700">
                 Less than three months after the creation of the team, we secured a first place finish in the Lean Startup Academy pitch competition, validating our concept and attracting interest from potential investors.
               </p>
@@ -292,7 +292,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-right">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q2</h3>
+              <h3 class="font-bold text-xl mb-2 text-gray-900">May 2025</h3>
               <p class="text-gray-700">
                 Restructured the core of the team to focus on efficient delivery of our vision, always calling back to the fundamental principles of science communication and illucidation.
               </p>
@@ -303,7 +303,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-left">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q2</h3>
+              <!-- <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q2</h3> -->
               <p class="text-gray-700">
                 Started looking for institutional partners and local funding to generate enough runway to support our first product development phase.
               </p>
@@ -314,7 +314,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content timeline-right">
-              <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q2</h3>
+              <!-- <h3 class="font-bold text-xl mb-2 text-gray-900">2025 Q2</h3> -->
               <p class="text-gray-700">
                 <strong>Now:</strong> Refining our product based on user feedback and preparing for a wider beta testing phase. Building our waitlist for our anticipated product launch.
               </p>
