--- a/manifesto.html
+++ b/manifesto.html
@@ -283,7 +283,7 @@
             <div class="timeline-content timeline-left">
               <h3 class="font-bold text-xl mb-2 text-gray-900">April 2025</h3>
               <p class="text-gray-700">
-                Less than three months after the creation of the team, we secured a first place finish in the Lean Startup Academy pitch competition, validating our concept and attracting interest from potential investors.
+                Less than three months after the creation of the team, DermTeach secured a first place finish in the Lean Startup Academy pitch competition, validating our concept and attracting interest from potential investors.
               </p>
             </div>
           </div>
@@ -360,7 +360,8 @@
             <p class="text-gray-700 mt-2">BS Biomedical Engineering, Purdue University</p>
             <p class="text-gray-700 mt-4">Leading operations and overseeing product development with expertise in biomedical device design and user experience optimization.</p>
           </div>
-          
+        </div>
+      </div>
       
       <!-- Our Values Section -->
       <div class="mb-16">
