--- a/manifesto.html
+++ b/manifesto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About — DermTeach</title>
+    <title>Manifesto — DermTeach</title>
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -228,6 +228,7 @@
 
     <div class="page-container">
       <h1 class="text-4xl font-bold page-title">About DermTeach</h1>
+      <p class="text-xl text-left mb-8 text-gray-700">We're making molecules into meaning.</p>
       
       <div class="my-10">
         <p class="text-lg text-gray-800 mb-8">
