--- a/solutions.html
+++ b/solutions.html
@@ -136,6 +136,7 @@
 
     <div class="page-container">
       <h1 class="text-4xl font-bold page-title">Our Solutions</h1>
+      <p class="text-xl text-left mb-8 text-gray-700">Where data meets daily routine.</p>
       
       <div class="my-10">
         <p class="text-lg text-gray-800 mb-8">
