--- a/people.html
+++ b/people.html
@@ -58,15 +58,15 @@
       
       <!-- Leadership Section -->
       <div class="mb-16">
-        <h2 class="text-2xl font-bold section-heading text-gray-900">Leadership</h2>
+        <h2 class="text-2xl font-bold section-heading text-gray-900">Cofounding Team</h2>
         
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-5 gap-4">
           <!-- CTO -->
           <div class="team-card">
             <div class="team-photo" style="background-image: url('/resources/filippo.jpg'); background-position: center; background-size: cover;"></div>
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-900">Filippo Cuni</h3>
-              <p class="text-gray-800 font-medium mb-3">Co-Founder & CTO</p>
+              <p class="text-gray-800 font-medium mb-3">Co-Founder</p>
               <p class="text-gray-700 mb-4">
                 Driving technology innovation with advanced research in biosensor technology and medical diagnostics.
               </p>
@@ -93,7 +93,7 @@
             <div class="team-photo" style="background-image: url('/resources/jaewoo.jpg'); background-position: center; background-size: cover;"></div>
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-900">Jaewoo Kang</h3>
-              <p class="text-gray-800 font-medium mb-3">Co-Founder & CEO</p>
+              <p class="text-gray-800 font-medium mb-3">Co-Founder</p>
               <p class="text-gray-700 mb-4">
                 Leading DermTeach's business strategy and vision with expertise in biochemical analysis and molecular diagnostics.
               </p>
@@ -120,7 +120,7 @@
             <div class="team-photo" style="background-image: url('/resources/kate.png'); background-position: center; background-size: cover;"></div>
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-900">Kate Gemrich</h3>
-              <p class="text-gray-800 font-medium mb-3">Co-Founder & COO</p>
+              <p class="text-gray-800 font-medium mb-3">Co-Founder</p>
               <p class="text-gray-700 mb-4">
                 Leading DermTeach's daily executive operations.
               </p>
@@ -134,6 +134,50 @@
                   </svg>
                 </a>
                 <a href="https://linkedin.com/in/kategemrich" class="social-icon" target="_blank">
+                  <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Adam Kahn -->
+          <div class="team-card">
+            <div class="team-photo" style="background-image: url('/resources/adam.png'); background-position: center; background-size: cover;"></div>
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-900">Adam Kahn</h3>
+              <p class="text-gray-800 font-medium mb-3">Co-Founder</p>
+              <p class="text-gray-700 mb-4">
+                Contributing to DermTeach's innovative approach to skin diagnostics.
+              </p>
+              <p class="text-gray-700 mb-4">
+                <strong>Education:</strong> BS Biomedical Engineering, Purdue University
+              </p>
+              <div class="flex space-x-4 mt-4">
+                <a href="https://linkedin.com/in/adamkahn" class="social-icon" target="_blank">
+                  <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Nadia Wheeler -->
+          <div class="team-card">
+            <div class="team-photo" style="background-image: url('./resources/nadia.png'); background-position: center; background-size: cover;"></div>
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-900">Nadia Wheeler</h3>
+              <p class="text-gray-800 font-medium mb-3">Co-Founder</p>
+              <p class="text-gray-700 mb-4">
+                Helping shape DermTeach's vision for accessible skin health solutions.
+              </p>
+              <p class="text-gray-700 mb-4">
+                <strong>Education:</strong> BS Biomedical Engineering, Purdue University
+              </p>
+              <div class="flex space-x-4 mt-4">
+                <a href="https://linkedin.com/in/nadiawheeler" class="social-icon" target="_blank">
                   <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
                     <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd"></path>
                   </svg>
