--- a/index.html
+++ b/index.html
@@ -281,6 +281,24 @@
         </div>
       </section>
 
+      <!-- Origins Section -->
+      <section class="origins-section" id="origins">
+        <div class="section-container text-center reveal">
+          <div class="max-w-3xl mx-auto">
+            <h2 class="text-2xl font-semibold text-gray-900 mb-4">Our Origins</h2>
+            <p class="text-lg text-gray-700 mb-6">
+              Formerly GlowVision, a Swiss startup in post-ideation stage, incubated from Lean Startup Academy at ETH.
+            </p>
+            <a href="people.html" class="inline-flex items-center text-base font-medium mahogany-accent hover:underline">
+              Meet the original team
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </section>
+
       <!-- Features Section with animated background -->
       <section class="features-section" id="features">
         <!-- Fluid animated background -->
