--- a/manifesto.html
+++ b/manifesto.html
@@ -188,7 +188,7 @@
             <div class="timeline-content timeline-left">
               <h3 class="font-bold text-xl mb-2 text-gray-900">April 2025</h3>
               <p class="text-gray-700">
-                Less than three months after the creation of the team, DermTeach secured a first place finish in the Lean Startup Academy pitch competition, validating our concept and attracting interest from potential investors.
+                Less than three months after the creation of the team, DermTeach(formerly GlowVision) emerged as a first place finish in the Lean Startup Academy demo day, validating our concept and attracting interest from potential investors.
               </p>
             </div>
           </div>
