--- a/manifesto.html
+++ b/manifesto.html
@@ -152,6 +152,13 @@
             A world where everyone has access to dermatological-grade insights about their unique skin profile, helping to minimize 
             skin conditions, reduce healthcare costs, and promote healthier, more confident lives.
           </p>
+
+          <h2 class="text-2xl font-bold text-gray-900 mb-4 mt-8">Public Transparency Clause</h2>
+          <p class="text-gray-800 leading-relaxed">
+            Every lab we run, we're doing it in public. You've heard of building in public with open source software, but never before
+            in the world of biochemical analysis. We're doing it <strong>now</strong>. User data remains private, but the techniques and technology
+            we use to craft our solutions are here for everyone to see. Our true secret remains in transparency and clarity of communication.
+          </p>
         </div>
       </div>
       
