--- a/people.html
+++ b/people.html
@@ -58,7 +58,7 @@
       
       <!-- Leadership Section -->
       <div class="mb-16">
-        <h2 class="text-2xl font-bold section-heading text-gray-900">Cofounding Team</h2>
+        <h2 class="text-2xl font-bold section-heading text-gray-900">Co-founding Team</h2>
         
         <div class="grid grid-cols-1 md:grid-cols-5 gap-4">
           <!-- CTO -->
