--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
               Join the Waitlist
             </button>
           </form>
+          <div class="mt-4">
+            <a href="https://github.com/dermteach/work-logs" class="btn-secondary" target="_blank">Access our work logs</a>
+          </div>
         </div>
       </section>
 
