--- a/solutions.html
+++ b/solutions.html
@@ -158,7 +158,10 @@
         <p class="text-gray-700 mb-6 max-w-2xl mx-auto">
           Join our waitlist to be among the first to experience DermTeach's innovative skin health technology.
         </p>
-        <a href="landing.html#hero" class="btn-primary">Join the Waitlist</a>
+        <div class="flex items-center justify-center space-x-4">
+          <a href="landing.html#hero" class="btn-primary">Join the Waitlist</a>
+          <a href="https://github.com/dermteach/work-logs" class="btn-secondary" target="_blank">Access our work logs</a>
+        </div>
       </div>
     </div>
     
