--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DERMTEACH — At-Home Skin Testing</title>
+    <title>VISAGE HEALTH — At-Home Skin Testing</title>
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -257,7 +257,7 @@
   <body>
     <!-- Header with navigation -->
     <header id="header">
-      <a href="index.html" class="logo">DermTeach</a>
+      <a href="index.html" class="logo">Visage Health</a>
       
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
@@ -269,41 +269,12 @@
     <div class="scroll-container">
       <!-- Hero Section -->
       <section class="hero-section" id="hero">
-        <!-- 3D model container -->
         <div class="model-container">
           <canvas id="point-cloud-canvas"></canvas>
         </div>
-        
-        <div class="section-container text-center reveal hero-content">
-          <h1 class="text-4xl sm:text-6xl font-bold max-w-4xl leading-tight mx-auto text-gray-900">
-            Discover Your Skin<br />
-            <span class="mahogany-accent">from Within</span>
-          </h1>
-          <p class="mt-6 max-w-xl text-lg text-gray-700 mx-auto relative px-8 py-3">
-            <span class="bg-oval">We're making skin science clear.</span>
-          </p>
-          <form
-            action="https://formspree.io/f/YOUR_FORM_ID"
-            method="POST"
-            class="mt-8 w-full max-w-md flex flex-col sm:flex-row gap-4 mx-auto"
-          >
-            <input
-              type="email"
-              name="email"
-              required
-              placeholder="Enter your email"
-              class="flex-1 px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-mahogany bg-white"
-            />
-            <button
-              type="submit"
-              class="btn-primary"
-            >
-              Join the Waitlist
-            </button>
-          </form>
-          <div class="mt-4">
-            <a href="https://github.com/dermteach/work-logs" class="btn-secondary" target="_blank">Access our work logs</a>
-          </div>
+        <div class="section-container flex flex-col items-start justify-center h-full hero-content" style="min-height:60vh;">
+          <h1 class="text-5xl sm:text-7xl font-extrabold text-black mb-4" style="letter-spacing:-2px;">Visage Health</h1>
+          <p class="text-lg sm:text-2xl text-gray-800 font-light mb-2 pl-1">[vis·​age] <span class="font-normal">(n)</span> the face, usually with reference to shape, features, expression, etc.</p>
         </div>
       </section>
 
@@ -405,7 +376,7 @@
     <!-- Footer as a simple bottom element - hidden by default -->
     <footer>
       <p class="text-sm text-gray-700">
-        &copy; 2025 DermTeach — All rights reserved.
+        &copy; 2025 Visage Health — All rights reserved.
       </p>
     </footer>
 
