--- a/solutions.html
+++ b/solutions.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solutions — DermTeach</title>
+    <title>Solutions — Visage Health</title>
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -85,7 +85,7 @@
   <body>
     <!-- Header with navigation -->
     <header id="header">
-      <a href="index.html" class="logo">DermTeach</a>
+      <a href="index.html" class="logo">Visage Health</a>
       
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link active">Solutions</a>
@@ -100,7 +100,7 @@
       
       <div class="my-10">
         <p class="text-lg text-gray-800 mb-8">
-          At DermTeach, we're revolutionizing skin health analysis with our innovative, 
+          At Visage Health, we're revolutionizing skin health analysis with our innovative, 
           at-home testing solutions that combine biomedical engineering precision with everyday convenience.
         </p>
       </div>
@@ -156,11 +156,11 @@
       <div class="mt-16 text-center">
         <h2 class="text-2xl font-bold mb-4 text-gray-900">Ready to transform your skincare approach?</h2>
         <p class="text-gray-700 mb-6 max-w-2xl mx-auto">
-          Join our waitlist to be among the first to experience DermTeach's innovative skin health technology.
+          Join our waitlist to be among the first to experience Visage Health's innovative skin health technology.
         </p>
         <div class="flex items-center justify-center space-x-4">
           <a href="landing.html#hero" class="btn-primary">Join the Waitlist</a>
-          <a href="https://github.com/dermteach/work-logs" class="btn-secondary" target="_blank">Access our work logs</a>
+          <a href="https://github.com/visagehealth/work-logs" class="btn-secondary" target="_blank">Access our work logs</a>
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
     <!-- Footer -->
     <footer>
       <p class="text-sm text-gray-700">
-        &copy; 2025 DermTeach — All rights reserved.
+        &copy; 2025 Visage Health — All rights reserved.
       </p>
     </footer>
 
