--- a/index.html
+++ b/index.html
@@ -282,9 +282,13 @@
       <section class="origins-section" id="origins">
         <div class="section-container text-center reveal">
           <div class="max-w-3xl mx-auto">
+            <div class="flex items-center justify-center mb-6">
+              <img src="resources/sph_logo.pdf" alt="SPH Logo" class="h-16 w-auto">
+              <span class="ml-4 text-lg text-gray-700 font-medium">Backed by SPH</span>
+            </div>
             <h2 class="text-2xl font-semibold text-gray-900 mb-4">Our Origins</h2>
             <p class="text-lg text-gray-700 mb-6">
-              Formerly GlowVision, a Swiss startup in post-ideation stage, incubated from Lean Startup Academy at ETH.
+              Formerly GlowVision, an early stage Swiss startup from Lean Startup Academy at ETH.
             </p>
             <a href="people.html" class="inline-flex items-center text-base font-medium mahogany-accent hover:underline">
               Meet the original team
