visage_health.logo

--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
   <body>
     <!-- Header with navigation -->
     <header id="header">
-      <a href="index.html" class="logo">Visage Health</a>
+      <a href="index.html" class="logo">
+        <img src="resources/VisageHealth_Logo.svg" alt="Visage Health" class="h-8 sm:h-10">
+      </a>
       
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
