--- a/manifesto.html
+++ b/manifesto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manifesto — Visage Health</title>
+    <link rel="icon" type="image/png" href="resources/favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -121,7 +122,9 @@
   <body>
     <!-- Header with navigation -->
     <header id="header">
-      <a href="index.html" class="logo">Visage Health</a>
+      <a href="index.html" class="logo">
+        <img src="resources/VisageHealth_Logo.svg" alt="Visage Health" class="h-8 sm:h-10">
+      </a>
       
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
