--- a/manifesto.html
+++ b/manifesto.html
@@ -352,7 +352,7 @@
                 </svg>
                 <div>
                   <p class="font-medium text-gray-900">Email</p>
-                  <p class="text-gray-700">team@visagehealth.com</p>
+                  <p class="text-gray-700">team@visage.health</p>
                 </div>
               </div>
               
