--- a/solutions.html
+++ b/solutions.html
@@ -6,7 +6,7 @@
     <title>Solutions — Visage Health</title>
     <link rel="icon" type="image/png" href="resources/favicon.png" />
     <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      href="resources/Microneedle_Patch_Biomarker_Demo_Video.mp4"
       rel="stylesheet"
     />
     <link href="styles.css" rel="stylesheet" />
