--- a/solutions.html
+++ b/solutions.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solutions — Visage Health</title>
     <link rel="icon" type="image/png" href="resources/favicon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <link href="styles.css" rel="stylesheet" />
     <style>
       /* Solutions page specific styles */
@@ -309,7 +313,7 @@
     <!-- Header with navigation -->
     <header id="header">
       <a href="index.html" class="logo">
-        <img src="resources/VisageHealth_Logo.svg" alt="Visage Health">
+        <img src="resources/VisageHealth_Logo.svg" alt="Visage Health" class="h-8 sm:h-10">
       </a>
       
       <nav class="nav-links">
