--- a/solutions.html
+++ b/solutions.html
@@ -365,7 +365,7 @@
           
           <!-- Video Description -->
           <div class="video-description">
-            <h3 class="demo-title">Interactive Technology Demo</h3>
+            <h3 class="demo-title">Technology Demo</h3>
             <p class="demo-description">
               This demonstration showcases our proprietary biosensor technology and how it analyzes skin health markers 
               to provide personalized insights and recommendations.
