--- a/solutions.html
+++ b/solutions.html
@@ -415,7 +415,7 @@
         </p>
         <div class="cta-buttons">
           <a href="index.html#hero" class="btn-primary">Join Our Community</a>
-          <a href="https://visage-health-labs.notion.site/25c829b091d3800e9cb4fa6552d6efd1?v=25c829b091d380daa8fc000ce1a588ac" class="btn-secondary" target="_blank">View Development Progress</a>
+          <a href="manifesto.html" class="btn-secondary">Read Our Manifesto</a>
         </div>
       </div>
     </div>
