removed publicity clause

--- a/solutions.html
+++ b/solutions.html
@@ -319,7 +319,6 @@
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link active">Solutions</a>
         <a href="people.html" class="nav-link">People</a>
-        <a href="manifesto.html" class="nav-link">Manifesto</a>
       </nav>
     </header>
 
@@ -409,13 +408,12 @@
       
       <!-- Call to Action -->
       <div class="cta-section">
-        <h2 class="cta-title">Ready to experience the future of skin health?</h2>
+        <h2 class="cta-title">Experience the future of skin health</h2>
         <p class="cta-description">
-          Watch our demo to see how our technology works, then join our community to stay updated on our progress and be among the first to access our platform.
+          Watch our demo to see how our technology works. For partnerships or pilot programs, get in touch with our team.
         </p>
         <div class="cta-buttons">
-          <a href="index.html#hero" class="btn-primary">Join Our Community</a>
-          <a href="manifesto.html" class="btn-secondary">Read Our Manifesto</a>
+          <a href="mailto:team@visage.health" class="btn-primary">Contact Us</a>
         </div>
       </div>
     </div>
