--- a/index.html
+++ b/index.html
@@ -283,7 +283,6 @@
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
         <a href="people.html" class="nav-link">People</a>
-        <a href="manifesto.html" class="nav-link">Manifesto</a>
       </nav>
     </header>
     
@@ -298,8 +297,8 @@
           <p class="text-lg sm:text-2xl text-gray-800 font-light mb-6 pl-1">[vis·​age] <span class="font-normal">(n)</span> the face, usually with reference to shape, features, expression, etc.</p>
           <div class="relative inline-block">
             <div class="fluid-bg" style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; border-radius: 0.5rem; overflow: hidden;"></div>
-            <a href="manifesto.html" class="relative inline-flex items-center px-6 py-3 font-semibold rounded-lg transition-all duration-200 shadow-lg hover:shadow-xl border-0 bg-white bg-opacity-90 backdrop-blur-sm text-black hover:bg-opacity-100">
-              Read our manifesto
+            <a href="solutions.html" class="relative inline-flex items-center px-6 py-3 font-semibold rounded-lg transition-all duration-200 shadow-lg hover:shadow-xl border-0 bg-white bg-opacity-90 backdrop-blur-sm text-black hover:bg-opacity-100">
+              Explore our technology
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
               </svg>
