--- a/people.html
+++ b/people.html
@@ -44,7 +44,6 @@
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
         <a href="people.html" class="nav-link active">People</a>
-        <a href="manifesto.html" class="nav-link">Manifesto</a>
       </nav>
     </header>
 
@@ -152,12 +151,11 @@
       
       <!-- Join Us Section -->
       <div class="mt-20 bg-white p-8 rounded-xl shadow-lg text-center">
-        <h2 class="text-2xl font-bold mb-4 text-gray-900">Join Our Team</h2>
+        <h2 class="text-2xl font-bold mb-4 text-gray-900">Careers</h2>
         <p class="text-gray-700 mb-6 max-w-2xl mx-auto">
-          We're always looking for passionate, talented individuals to help us revolutionize skin health. 
-          Check out our open positions and become part of the Visage Health journey.
+          Interested in future roles at Visage Health? Reach out with your CV to our team.
         </p>
-        <a href="#" class="btn-primary">View Open Positions</a>
+        <a href="mailto:team@visage.health" class="btn-primary">Contact Careers</a>
       </div>
     </div>
     
