--- a/manifesto.html
+++ b/manifesto.html
@@ -129,6 +129,7 @@
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
         <a href="people.html" class="nav-link">People</a>
+        <a href="manifesto.html" class="nav-link active">Manifesto</a>
       </nav>
     </header>
 
@@ -170,7 +171,7 @@
             <div class="timeline-content timeline-left">
               <h3 class="font-bold text-xl mb-2 text-gray-900">Feb 2025</h3>
               <p class="text-gray-700">
-                The Visage Health concept was born when Jaewoo Kang (UT) and Adam Kahn (Purdue) met at Lean Startup Academy and connected over their shared vision of bringing clinical-grade skin diagnostics to the home setting.
+                The Visage Health concept was born when Jaewoo Kang (UT) and Filippo Cuni (ETH) met at Lean Startup Academy and connected over their shared vision of bringing clinical-grade skin diagnostics to the home setting.
               </p>
             </div>
           </div>
