--- a/solutions.html
+++ b/solutions.html
@@ -319,6 +319,7 @@
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link active">Solutions</a>
         <a href="people.html" class="nav-link">People</a>
+        <a href="manifesto.html" class="nav-link">Manifesto</a>
       </nav>
     </header>
 
