--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
         <a href="people.html" class="nav-link">People</a>
+        <a href="manifesto.html" class="nav-link">Manifesto</a>
       </nav>
     </header>
     
