--- a/people.html
+++ b/people.html
@@ -44,6 +44,7 @@
       <nav class="nav-links">
         <a href="solutions.html" class="nav-link">Solutions</a>
         <a href="people.html" class="nav-link active">People</a>
+        <a href="manifesto.html" class="nav-link">Manifesto</a>
       </nav>
     </header>
 
