--- a/manifesto.html
+++ b/manifesto.html
@@ -240,8 +240,8 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           <!-- Team Member 1 -->
           <div class="bg-white p-6 rounded-xl shadow-md text-center">
-            <div class="w-32 h-32 rounded-full bg-gray-100 mx-auto mb-4 flex items-center justify-center">
-              <span class="text-gray-900 text-2xl font-bold">JK</span>
+            <div class="w-32 h-32 rounded-full bg-gray-100 mx-auto mb-4 overflow-hidden">
+              <img src="resources/jaewoo.jpg" alt="Jaewoo Kang" class="w-full h-full object-cover">
             </div>
             <h3 class="text-xl font-bold text-gray-900">Jaewoo Kang</h3>
             <p class="text-gray-800 font-medium">Co-Founder & CEO</p>
@@ -251,8 +251,8 @@
           
           <!-- Team Member 2 -->
           <div class="bg-white p-6 rounded-xl shadow-md text-center">
-            <div class="w-32 h-32 rounded-full bg-gray-100 mx-auto mb-4 flex items-center justify-center">
-              <span class="text-gray-900 text-2xl font-bold">AK</span>
+            <div class="w-32 h-32 rounded-full bg-gray-100 mx-auto mb-4 overflow-hidden">
+              <img src="resources/adam.png" alt="Adam Kahn" class="w-full h-full object-cover">
             </div>
             <h3 class="text-xl font-bold text-gray-900">Adam Kahn</h3>
             <p class="text-gray-800 font-medium">Co-Founder & CTO</p>
@@ -262,8 +262,8 @@
           
           <!-- Team Member 3 -->
           <div class="bg-white p-6 rounded-xl shadow-md text-center">
-            <div class="w-32 h-32 rounded-full bg-gray-100 mx-auto mb-4 flex items-center justify-center">
-              <span class="text-gray-900 text-2xl font-bold">KG</span>
+            <div class="w-32 h-32 rounded-full bg-gray-100 mx-auto mb-4 overflow-hidden">
+              <img src="resources/kate.png" alt="Kate Gemrich" class="w-full h-full object-cover">
             </div>
             <h3 class="text-xl font-bold text-gray-900">Kate Gemrich</h3>
             <p class="text-gray-800 font-medium">Chief Operating Officer</p>
